--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,12 @@ plugins {
 
 android {
     namespace 'com.application.zaki.githubuser'
-    compileSdk 33
+    compileSdk 32
 
     defaultConfig {
         applicationId "com.application.zaki.githubuser"
         minSdk 23
-        targetSdk 33
+        targetSdk 32
         versionCode 1
         versionName "1.0"
 
@@ -40,7 +40,7 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -86,4 +86,12 @@ dependencies {
     def glide_version = "4.13.2"
     implementation("com.github.bumptech.glide:glide:$glide_version")
     annotationProcessor("com.github.bumptech.glide:compiler:$glide_version")
+
+    // library shimmer facebook
+    def shimmer_version = "0.5.0"
+    implementation("com.facebook.shimmer:shimmer:$shimmer_version")
+
+    // library circle image
+    def circle_image_version = "3.1.0"
+    implementation ("de.hdodenhof:circleimageview:$circle_image_version")
 }
