--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,11 +18,15 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file("local.properties").newDataInputStream())
+        buildConfigField "String", "GITHUB_API_KEY", "\"${properties.getProperty("GITHUB_API_KEY")}\""
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -59,7 +63,7 @@ dependencies {
     implementation("com.squareup.okhttp3:logging-interceptor:$okhttp_version")
 
     // library coroutine
-    def coroutines_version = "1.6.1"
+    def coroutines_version = "1.6.4"
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version")
 
@@ -83,7 +87,7 @@ dependencies {
     implementation("androidx.paging:paging-runtime:$pagination_version")
 
     // library glide image
-    def glide_version = "4.13.2"
+    def glide_version = "4.14.0"
     implementation("com.github.bumptech.glide:glide:$glide_version")
     annotationProcessor("com.github.bumptech.glide:compiler:$glide_version")
 
@@ -94,4 +98,9 @@ dependencies {
     // library circle image
     def circle_image_version = "3.1.0"
     implementation ("de.hdodenhof:circleimageview:$circle_image_version")
+
+    // library chucker
+    def chucker_version = "3.5.2"
+    debugImplementation "com.github.chuckerteam.chucker:library:$chucker_version"
+    releaseImplementation "com.github.chuckerteam.chucker:library-no-op:$chucker_version"
 }
