--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,4 +123,8 @@ dependencies {
     def sqlite_version = "2.2.0"
     implementation "net.zetetic:android-database-sqlcipher:$sql_cipher_version"
     implementation "androidx.sqlite:sqlite-ktx:$sqlite_version"
+
+    // timber
+    def timber_version = "5.0.1"
+    implementation "com.jakewharton.timber:timber:$timber_version"
 }
